Change rounding to floor.